--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@ header-img: "img/sky.jpg"
 <div class="en post-container">
     <blockquote><p><br></p></blockquote>
 
-    <p>Hi, I am <strong>Gadaigadai(张伶卫)</strong>. I'm a programmer &amp; sports fans. </p>
+    <p>Hi, I am <strong>Gadaigadai(张伶卫)</strong>. I'm a programmer &amp; sports fan. </p>
 
     <h5>Talks</h5>
 
