--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: Tags
 layout: default
-description: where amazing happens
+description: Where Amazing Happens.
 header-img: "img/tag-bg.jpg"
 ---
 
