--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ header-img: "img/sky.jpg"
     <!--copied from markdown -->
     <blockquote><p><br></p></blockquote>
 
-    <p>Hey，我是<strong>张伶卫</strong>，一个程序员 &amp; 球迷; </p>
+    <p>Hey，我是<strong>张伶卫</strong>，一个程序员 &amp; 球迷。之前重点研究过openstack的ceilometer模块，目前在学习kubernetes中。 </p>
 
     <h5>Talks</h5>
 
@@ -30,7 +30,7 @@ header-img: "img/sky.jpg"
 <div class="en post-container">
     <blockquote><p><br></p></blockquote>
 
-    <p>Hi, I am <strong>Gadaigadai(张伶卫)</strong>. I'm a programmer &amp; sports fan. </p>
+    <p>Hi, I am <strong>Gadaigadai(张伶卫)</strong>. I'm a programmer &amp; sports fan. Focused on the openstack ceilometer module, currently studying kubernetes.</p>
 
     <h5>Talks</h5>
 
